--- a/app/assets/javascripts/discourse/app/templates/second-factor-auth.hbs
+++ b/app/assets/javascripts/discourse/app/templates/second-factor-auth.hbs
@@ -16,7 +16,7 @@
       }}
     </div>
   {{else if (or showTotpForm showBackupCodesForm)}}
-    <form>
+    <form class={{inputFormClass}}>
       {{second-factor-input
         value=secondFactorToken
         secondFactorMethod=shownSecondFactorMethod
@@ -38,7 +38,7 @@
           <span>&middot;</span>
         {{/if}}
         <span>
-          <a href="" class="toggle-second-factor-method" {{action "useAnotherMethod" method.id}}>
+          <a href="" class="toggle-second-factor-method {{method.class}}" {{action "useAnotherMethod" method.id}}>
             {{i18n method.translationKey}}
           </a>
         </span>
